// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar should render correctly without props nor session 1`] = `
<WithStyles(ForwardRef(Drawer))
  variant="permanent"
>
  <div
    id="sidebar"
  >
    <div
      className="logo"
    >
      <LandscapeIcon
        fontSize="large"
      />
    </div>
    <div
      className="spaceNav"
    />
    <div
      className="menuItem"
    >
      <Link
        tabIndex="-1"
        to="/"
      >
        <AddCircleOutlineIcon
          fontSize="large"
        />
      </Link>
    </div>
    <div
      className="menuItem clear"
    >
      <Link
        onClick={[Function]}
        tabIndex="-1"
        to="/"
      >
        <ClearAllIcon
          fontSize="large"
        />
      </Link>
    </div>
  </div>
</WithStyles(ForwardRef(Drawer))>
`;

exports[`Sidebar should render tabs with session storage 1`] = `
<WithStyles(ForwardRef(Drawer))
  variant="permanent"
>
  <div
    id="sidebar"
  >
    <div
      className="logo"
    >
      <LandscapeIcon
        fontSize="large"
      />
    </div>
    <div
      className="spaceNav"
    >
      <div
        className="spaceNavItem "
        key="1"
      >
        <Link
          className=""
          tabIndex="-1"
          to={
            Object {
              "pathname": "/r/",
              "state": Object {
                "pathname": "/s/",
                "state": Object {
                  "space": Object {
                    "id": 1,
                    "name": "space1",
                    "status": true,
                  },
                },
              },
            }
          }
        >
          space1
        </Link>
      </div>
      <div
        className="spaceNavItem "
        key="2"
      >
        <Link
          className=""
          tabIndex="-1"
          to={
            Object {
              "pathname": "/r/",
              "state": Object {
                "pathname": "/s/",
                "state": Object {
                  "space": Object {
                    "id": 2,
                    "name": "space2",
                    "status": true,
                  },
                },
              },
            }
          }
        >
          space2
        </Link>
      </div>
      <div
        className="spaceNavItem "
        key="3"
      >
        <Link
          className=""
          tabIndex="-1"
          to={
            Object {
              "pathname": "/r/",
              "state": Object {
                "pathname": "/s/",
                "state": Object {
                  "space": Object {
                    "id": 3,
                    "name": "space3",
                    "status": true,
                  },
                },
              },
            }
          }
        >
          space3
        </Link>
      </div>
    </div>
    <div
      className="menuItem"
    >
      <Link
        tabIndex="-1"
        to="/"
      >
        <AddCircleOutlineIcon
          fontSize="large"
        />
      </Link>
    </div>
    <div
      className="menuItem clear"
    >
      <Link
        onClick={[Function]}
        tabIndex="-1"
        to="/"
      >
        <ClearAllIcon
          fontSize="large"
        />
      </Link>
    </div>
  </div>
</WithStyles(ForwardRef(Drawer))>
`;
